--- a/ourchetype.html
+++ b/ourchetype.html
@@ -1,27 +1,34 @@
 <body>
   <ul>
     <li>
-      <a href="./ourchetype-2">Ourchetype 2 ><a>
+      <a href="./ourchetype-2">Ourchetype 2 ></a>
     </li>
     <li>
-        <a href="./ourchetype-3">Ourchetype 3 ><a>
+        <a href="./ourchetype-3">Ourchetype 3 ></a>
     </li>
     <li>
-        <a href="./ourchetype-3-en">Ourchetype 3 (English) ><a>
+        <a href="./ourchetype-3-en">Ourchetype 3 (English) ></a>
     </li></li>
     <li>
-      <a href="./ourchetype-nuart">Ourchetype NuArt ><a>
+      <a href="./ourchetype-nuart">Ourchetype NuArt ></a>
     </li>
     <li>
-      <a href="./ourchetype-icad">Ourchetype ICAD ><a>
+      <a href="./ourchetype-icad">Ourchetype ICAD ></a>
     </li>
     <li>
-      <a href="./ourchetype-4">Ourchetype 4 ><a>
+      <a href="./ourchetype-4">Ourchetype 4 ></a>
     </li>
     <li>
-      <a href="./strada">Strada ><a>
+      <a href="./strada">Strada ></a>
+    </li>
+    <li>
+      <a href="./tarrarium">Tarrarium ></a>
     </li>
   </ul>
+  <h2>Staging</h2>
+  <li>
+    <a href="./staging/tarrarium">Tarrarium ></a>
+  </li>
 </body>
 
 <style>
