--- a/ourchetype.html
+++ b/ourchetype.html
@@ -11,10 +11,10 @@
         <a href="./ourchetype-3-en">Ourchetype 3 (English) ></a>
     </li></li>
     <li>
-      <a href="./ourchetype-nuart">Ourchetype NuArt ></a>
+      <a href="./nuart">Ourchetype NuArt ></a>
     </li>
     <li>
-      <a href="./ourchetype-icad">Ourchetype ICAD ></a>
+      <a href="./icad">Ourchetype ICAD ></a>
     </li>
     <li>
       <a href="./ourchetype-4">Ourchetype 4 ></a>
