--- a/staging/ourchetype-experiments/index.html
+++ b/staging/ourchetype-experiments/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://cdn.jsdelivr.net/npm/hacktimer@1.1.3/HackTimer.min.js"></script>
     <meta charset="UTF-8">
     <link rel="icon" href="./favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
